--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,7 @@
     "dev": "nest start --watch",
     "start:swc": "nest start -b swc",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
